--- a/app/src/main/res/layout/activity_practical_tes01_var03_main.xml
+++ b/app/src/main/res/layout/activity_practical_tes01_var03_main.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:saveEnabled="false"
             android:hint="Enter first number"/>
 
         <LinearLayout
@@ -45,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:saveEnabled="false"
             android:hint="Enter second number"/>
 
         <TextView
