--- a/app/src/main/res/layout/activity_practical_tes01_var03_main.xml
+++ b/app/src/main/res/layout/activity_practical_tes01_var03_main.xml
@@ -61,6 +61,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Switch Activity"/>
+
+        <TextView
+            android:id="@+id/message_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="118dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
